--- a/style.css
+++ b/style.css
@@ -6,37 +6,7 @@
   font-family: 'Ginger';
   src: url(fonts/Ginger.ttf);
 }
-/* .preloader {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    width: 100%;
-    background: rgb(0, 0, 0);
-    position: fixed;
-    top: 0;
-    left: 0;
-    z-index: 9999;
-    transition: opacity 0.3s linear;
-    text-transform: uppercase;
-    color: white
-  }
-.preloader .line {
-    width: 1px;
-    height: 12px;
-    background: #fff;
-    margin: 0 1px;
-    display: inline-block;
-    animation: opacity-1 1000ms infinite ease-in-out;
-  }
-  .preloader .line-1 { animation-delay: 800ms; }
-  .preloader .line-2 { animation-delay: 600ms; }
-  .preloader .line-3 { animation-delay: 400ms; }
-  .preloader .line-4 { animation-delay: 200ms; }
-  .preloader .line-6 { animation-delay: 200ms; }
-  .preloader .line-7 { animation-delay: 400ms; }
-  .preloader .line-8 { animation-delay: 600ms; }
-  .preloader .line-9 { animation-delay: 800ms; } */
+
   
   @keyframes opacity-1 { 
     0% { 
@@ -783,6 +753,7 @@ img{
   align-items: center;
   flex-wrap: wrap;
   background-color: white;
+  padding:5%;
   
   
 }
@@ -890,13 +861,12 @@ p{
 
 .row {
   display: flex;
+  position:relative;
   width: 100%;
   justify-content: center;
   text-align: center;
-
-
-  
 }
+
 
 .row .col {
   width: 380px;
