--- a/style.css
+++ b/style.css
@@ -84,7 +84,7 @@
     position: relative;
     text-align: center;
     margin-bottom: 300px;
-    color:white;
+  
   }
 
   /* Service Section */
@@ -98,12 +98,13 @@
     justify-content: center;
     text-align: center;
     padding: 8%;
-    background-color: white;
+    background-color: black;
   }
   
   h5 {
     font-size: 50px;
     margin: 0;
+    color:white;
   }
   .gs_reveal {
     opacity: 0;
@@ -260,12 +261,13 @@ h4 .title {
 
 p.gs_reveal{
   font-size: 25px;
+  color:#ccc;
 }
 
 
   /*footer*/
   footer {
-    background-color: #fff;
+    background-color: black;
     padding-bottom: 5em;
     text-align: center;
     font-size: 3em;
@@ -577,7 +579,7 @@ svg {
 
 
 
-
+/* 
 #menu {
   z-index: 2;
   vertical-align: middle;
@@ -672,6 +674,166 @@ svg {
   height: 460px;
   margin-right: 0%;
   transform: translate(50%,-30%);
+} */
+
+
+.wrapper{
+  position: fixed;
+  top: 0;
+  /*left: -100%;*/
+  right: -100%;
+  height: 100%;
+  width: 100%;
+  background:#ccc;
+  /*background: linear-gradient(90deg, #f92c78, #4114a1);*/
+  /* background: linear-gradient(375deg, #1cc7d0, #2ede98); */
+ /* background: linear-gradient(-45deg, #e3eefe 0%, #efddfb 100%);*/
+  transition: all 0.6s ease-in-out;
+}
+#active:checked ~ .wrapper{
+  /*left: 0;*/
+  right:0;
+}
+.menu-btn{
+  position: absolute;
+  z-index: 2;
+  right: 20px;
+  /*left: 20px; */
+  top: 10px;
+  height: 50px;
+  width: 50px;
+  text-align: center;
+  line-height: 50px;
+  border-radius: 50%;
+  font-size: 20px;
+  cursor: pointer;
+  color:#1a73e8;
+  /*background: linear-gradient(90deg, #f92c78, #4114a1);*/
+  /* background: linear-gradient(375deg, #1cc7d0, #2ede98); */
+ /* background: linear-gradient(-45deg, #e3eefe 0%, #efddfb 100%); */
+  transition: all 0.3s ease-in-out;
+}
+.menu-btn span,
+.menu-btn:before,
+.menu-btn:after{
+	content: "";
+	position: absolute;
+	top: calc(50% - 1px);
+	left: 30%;
+	width: 40%;
+	border-bottom: 2px solid white;
+	transition: transform .6s cubic-bezier(0.215, 0.61, 0.355, 1);
+}
+.menu-btn:before{
+  transform: translateY(-8px);
+}
+.menu-btn:after{
+  transform: translateY(8px);
+}
+
+
+.close {
+	z-index: 1;
+	width: 100%;
+	height: 100%;
+	pointer-events: none;
+	transition: background .6s;
+}
+
+/* closing animation */
+#active:checked + .menu-btn span {
+	transform: scaleX(0);
+}
+#active:checked + .menu-btn:before {
+	transform: rotate(45deg);
+  border-color: #fff;
+}
+#active:checked + .menu-btn:after {
+	transform: rotate(-45deg);
+  border-color: #fff;
+}
+.wrapper ul{
+  position: absolute;
+  top: 60%;
+  left: 50%;
+  height: 90%;
+  transform: translate(-50%, -50%);
+  list-style: none;
+  text-align: center;
+}
+.wrapper ul li{
+  height: 10%;
+  margin: 15px 0;
+}
+.wrapper ul li a{
+  text-decoration: none;
+  font-size: 30px;
+  font-weight: 500;
+  padding: 5px 30px;
+  border-radius: 50px;
+  position:relative;
+  line-height: 50px;
+  margin: 5px 30px;
+  opacity: 0;
+  justify-content: center;
+  transition: all 0.3s ease;
+  transition: transform .6s cubic-bezier(0.215, 0.61, 0.355, 1);
+}
+.wrapper ul li a:after{
+  position: absolute;
+  content: "";
+  background: #fff;
+   /*background: linear-gradient(#14ffe9, #ffeb3b, #ff00e0);*/
+  /*background: linear-gradient(375deg, #1cc7d0, #2ede98);*/
+  width: 100%;
+  height: 100%;
+  left: 0;
+  top: 0;
+  border-radius: 50px;
+  transform: scaleY(0);
+  z-index: -1;
+  transition: transform 0.3s ease;
+}
+.wrapper ul li a:hover:after{
+  transform: scaleY(1);
+}
+.wrapper ul li a:hover{
+  color: #1a73e8;
+}
+input[type="checkbox"]{
+  display: none;
+}
+.content{
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: -1;
+  text-align: center;
+  width: 100%;
+  color: #202020;
+}
+.content .title{
+  font-size: 40px;
+  font-weight: 700;
+}
+.content p{
+  font-size: 35px;
+  font-weight: 600;
+}
+
+#active:checked ~ .wrapper ul li a{
+  opacity: 1;
+}
+.wrapper ul li a{
+  transition: opacity 1.2s, transform 1.2s cubic-bezier(0.215, 0.61, 0.355, 1);
+  transform: translateX(100px);
+}
+#active:checked ~ .wrapper ul li a{
+	transform: none;
+	transition-timing-function: ease, cubic-bezier(.1,1.3,.3,1); /* easeOutBackを緩めた感じ */
+   transition-delay: .6s;
+  transform: translateX(-100px);
 }
 
 
@@ -736,9 +898,13 @@ svg {
   transition: transform .4s cubic-bezier(.19,1,.22,1),-webkit-transform .4s cubic-bezier(.19,1,.22,1);
 }
 
+#intro{
+  background-color: black;
+}
 img{
   width:10%;
   height:auto;
+  background-color: black;
 }
 
 
@@ -752,7 +918,7 @@ img{
   justify-content: center;
   align-items: center;
   flex-wrap: wrap;
-  background-color: white;
+  background-color: black;
   padding:5%;
   
   
@@ -763,7 +929,7 @@ img{
       justify-content: center;
       align-items: center;
       flex-wrap: wrap;
-      background-color: white;
+      background-color: black;
       padding-bottom: 20%;
       padding-top: 10%;
   padding: 10px;
@@ -851,7 +1017,7 @@ p{
 .section-tours {
   justify-content: center;
   align-items: center;
-  background-color: white;
+  background-color: black;
  padding-bottom: 5%;
   padding-top: 5%;
   justify-content: middle;
