--- a/style.css
+++ b/style.css
@@ -79,11 +79,12 @@
     flex-direction: column;
     justify-content: flex-end;
     align-items: center;
+  
   }
   .bottomPosition{
     position: relative;
     text-align: center;
-    margin-bottom: 300px;
+    margin-bottom: 200px;
   
   }
 
@@ -97,7 +98,8 @@
     font-family: "Ginger";
     justify-content: center;
     text-align: center;
-    padding: 8%;
+    padding-left: 8%;
+    padding-right: 8%;
     background-color: black;
   }
   
