--- a/style.css
+++ b/style.css
@@ -38,12 +38,30 @@
   }
 }
 
-
+.navlinks {
+  color: #fff;
+  animation: first_color .5s ease-in-out infinite alternate;
+}
+.fa-brands fa-discord {
+  animation-name: second_color;
+}
+@keyframes first_color{
+  0% {
+    text-shadow: 0 0 10px #ff1177, 0 0 20px #d6249f, 0 0 30px #285AEB}
+  100% {
+    text-shadow: 0 0 5px #ff1177, 0 0 10px #d6249f, 0 0 15px #285AEB}
+  }
+@keyframes second_color {
+  0% {
+    text-shadow: 0 0 10px #1877f2, 0 0 20px #1459b3, 0 0 30px #179bff}
+  100% {
+    text-shadow: 0 0 5px #1877f2, 0 0 10px #1459b3, 0 0 15px #179bff}
+  }
 
   /* HeroPage */
   #magic {
     position: absolute;
-    width: 100%;
+    width: 100vw;
     height: 100vh;
     display: block;
     top: 0;
@@ -87,7 +105,9 @@
     background: black;
   }
   
-  
+
+
+
   h5 {
     font-size: 50px;
     margin: 0;
@@ -294,7 +314,7 @@ p.gs_reveal{
 .navbar-brand {
     margin: 0;
     grid-area: author;
-    font-size: 30px;
+    font-size: 40px;
     padding: 30px;
     font-family: "Fredoka";
     background-image: linear-gradient(90deg, rgba(94,114,235,1) 0%, rgba(255,145,144,1) 56%, rgba(254,193,149,1) 100%);
@@ -306,14 +326,14 @@ p.gs_reveal{
 
 .nav div.main_list {
     float: right;
-    font-size: 20px;
+    font-size: 40px;
     margin-top: 0;
     margin-right:0;
 }
 
 .nav div.main_list ul {
     width: 100%;
-    height: 50px;
+    height: 80px;
     display: flex;
     list-style: none;
     margin: 0;
@@ -445,108 +465,6 @@ img{
 }
 
 
-
-
-
-/* Team Card */
-
-.team-container {
-  display: relative;
-  justify-content: center;
-  align-items: center;
-  flex-wrap: wrap;
-  background-color: black;
-  padding:5%;
-  
-  
-}
-
-.team{
-  display: flex;
-      justify-content: center;
-      align-items: center;
-      flex-wrap: wrap;
-      background-color: black;
-      padding-bottom: 20%;
-      padding-top: 10%;
-  padding: 10px;
-}
-
-h2{
-  font-family: "Appetite";
-  font-size: 18px;
-  color: white;
-}
-
-p{
-  font-family: 'M PLUS Rounded 1c', sans-serif;;
-  font-size: 18px;
-  line-height: 150%;
-}
-
-.card {
-  background-color: white;
-  background-image: linear-gradient(rgba(94,114,235,.5),  rgb(105, 107, 124));
-  border-radius: 20px;
-  width: 200px;
-  height: 250px;
-  text-align: center;
-  position: relative;
-  overflow: hidden;
-  margin: 20px;
-  
-}
-
-.avatar img {
-  
-  min-width: 100%;
-    min-height: 100%
-  
-}
-
-.summary a,
-.summary a:hover,
-.summary a:active,
-.summary a:visited {
-  color: #ffffff;
-  text-decoration: none;
-}
-
-.summary h3 {
-  color: #ffffff;
-  font-size: 15px;
-  z-index: 30;
-}
-
-.skills-container {
-  position: absolute;
-  width: 200px;
-  bottom: -350px;
-  border-radius: 15px;
-  background-color: #fff;
-  transition: all .8s;
-
-}
-
-.skills-container a {
-  font-size: 25px;
-}
-
-.card:hover .summary {
-  opacity: 0;
-  transition: all .2s;
-  
-}
-
-.card:hover .skills-container {
-  bottom: 0;
-  transition: all .2s .2s;
-}
-
-.skills a {
-  color: transparent;
-  
-}
 
 
 
@@ -723,10 +641,10 @@ h6{
 
 h1{
   position: absolute;
-  top: 50%;
+  top: 40%;
   left: 50%;
   margin-top: 150px;
-  font-size: 32px;
+  font-size: 50px;
   text-transform: uppercase;
   transform: translate(-50%, -50%);
   color: #12000a;
@@ -740,9 +658,9 @@ h1{
 #svgWrap_2{
   position: absolute;
   height: auto;
-  width: 800px;
+  width: 70%;
   max-width: 100%;
-  top: 50%;
+  top: 40%;
   left: 50%;
   transform: translate(-50%, -50%);
 }
@@ -1037,5 +955,236 @@ input[type="checkbox"]{
   transform: translateX(-100px);
 }
 
+
+
+
+
+
+   
+#parallax,
+.layer {
+    height: 250vh;
+    position: absolute;
+    width: 100%;
+    margin-top: -25%;
+    
+}
+
+
+
+aside#mouse-parallax {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 1;
+    overflow: hidden;
+    overflow: hidden;
+    z-index: 2;
+    pointer-events: none;
+}
+
+aside#mouse-parallax ul#scene {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 1;
+    overflow: hidden;
+    overflow: hidden;
+    margin: 0
+}
+
+aside#mouse-parallax ul#scene .layer:nth-of-type(1) {
+    z-index: 3;
+}
+
+aside#mouse-parallax ul#scene .layer {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 1;
+    overflow: hidden;
+    overflow: visible;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    user-select: none;
+    -webkit-transform: translateZ(0);
+    -moz-transform: translateZ(0);
+    -ms-transform: translateZ(0);
+    -o-transform: translateZ(0);
+    transform: translateZ(0);
+    -webkit-transform: translate3d(0, 0, 0);
+    -moz-transform: translate3d(0, 0, 0);
+    transform: translate3d(0, 0, 0);
+    -webkit-backface-visibility: hidden;
+    backface-visibility: hidden;
+    -webkit-perspective: 1000;
+    -moz-perspective: 1000;
+    perspective: 1000;
+}
+
+
+aside#mouse-parallax ul#scene .layer .canvas {
+    width: 108%;
+    height: 208%;
+    position: absolute;
+    top: -4%;
+    left: -4%;
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: cover;
+}
+
+aside#mouse-parallax ul#scene .layer:nth-of-type(2) {
+    z-index: 1;
+}
+
+
+aside#mouse-parallax ul#scene .layer .canvas.group2 {
+  z-index: 1;
+  background-image: url(/images/rocket.png);
+  background-size: 300px;
+  background-position: 980px 2350px;
+}
+
+aside#mouse-parallax ul#scene .layer .canvas.group3 {
+    z-index: 2;
+    background-image: url(/images/dj.png);
+    background-size: 250px;
+    background-position: 640px 560px;
+}
+
+aside#mouse-parallax ul#scene .layer:nth-of-type(3) {
+    z-index: 2;
+}
+
+aside#mouse-parallax ul#scene .layer .canvas.group4 {
+  background-image: url(/images/smilee.png);
+  background-size: 250px;
+  background-position: 200px 1900px;
+
+    z-index: 1;
+}
+
+aside#mouse-parallax ul#scene .layer .canvas.group5 {
+  background-image: url(/images/heart.png);
+  background-size: 150px;
+  background-position: 1200px 1450px;
+    z-index: 2;
+}
+
+aside#mouse-parallax ul#scene .layer .canvas.group6 {
+  background-image: url(/images/cool.png);
+    z-index: 3;
+    background-size: 200px;
+    background-position: 130px 300px;
+}
+
+
+
+
+
+.team-container {
+  display: relative;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  background-color: black;
+  padding:5%;
+  
+  
+}
+
+.team{
+  display: flex;
+      justify-content: center;
+      align-items: center;
+      flex-wrap: wrap;
+      background-color: black;
+      padding-bottom: 20%;
+      padding-top: 10%;
+  padding: 10px;
+}
+
+h2{
+  font-family: "Appetite";
+  font-size: 18px;
+  color: white;
+}
+
+p{
+  font-family: 'M PLUS Rounded 1c', sans-serif;;
+  font-size: 18px;
+  line-height: 150%;
+}
+
+.card {
+  background-color: white;
+  background-image: linear-gradient(rgba(94,114,235,.5),  rgb(105, 107, 124));
+  border-radius: 20px;
+  width: 200px;
+  height: 250px;
+  text-align: center;
+  position: relative;
+  overflow: hidden;
+  margin: 20px;
+  
+}
+
+.avatar img {
+  
+  min-width: 100%;
+    min-height: 100%
+  
+}
+
+.summary a,
+.summary a:hover,
+.summary a:active,
+.summary a:visited {
+  color: #ffffff;
+  text-decoration: none;
+}
+
+.summary h3 {
+  color: #ffffff;
+  font-size: 15px;
+  z-index: 30;
+}
+
+.skills-container {
+  position: absolute;
+  width: 200px;
+  bottom: -350px;
+  border-radius: 15px;
+  background-color: #fff;
+  transition: all .8s;
+
+}
+
+.skills-container a {
+  font-size: 25px;
+}
+
+.card:hover .summary {
+  opacity: 0;
+  transition: all .2s;
+  
+}
+
+.card:hover .skills-container {
+  bottom: 0;
+  transition: all .2s .2s;
+}
+
+.skills a {
+  color: transparent;
+  
+}
 
 
