--- a/style.css
+++ b/style.css
@@ -17,8 +17,6 @@
     padding: 0px;
     margin: 0px;
     cursor:none;
-  
-
   }
 
   body {
@@ -34,10 +32,159 @@
 
 @media screen and (max-width: 600px) {
   body{
-    width:250%;
+    width:100%;
   }
 }
 
+header{
+  width:100%;
+  position: relative;
+  overflow:hidden;
+  background-color: black;
+}
+.custom-cursor{
+  display: none;
+}
+
+.menu{
+  display:none;
+}
+
+nav{
+  width: 100%;
+  height: 4rem;
+  font-family: "Ginger";
+  font-size:1.5rem;
+  line-height: 5rem;
+  
+  
+}
+
+.nav-container{
+  width:100%;
+  margin:0 auto;
+  
+}
+
+.logo{
+  float:left;
+  margin-top:0rem;
+
+}
+.logo img{
+  width:8rem;
+  height:8rem;
+}
+nav ul{
+  list-style:none;
+  float: right;
+}
+nav ul li{
+  display: inline-block;
+  padding: 0 1.5rem;
+  transition:opacity 0.3s;
+}
+nav ul li a{
+  text-decoration: none;
+  font-family: 'Ginger';
+        background-image: linear-gradient(-225deg,
+        rgba(94,114,235,1) 0%,
+        rgba(255,145,144,1) 29%,
+        rgba(254,193,149,1) 67%,
+        #ebe75c 100%);
+    background-size: auto auto;
+    background-clip: border-box;
+    background-size: 200% auto;
+    color: #fff;
+    background-clip: text;
+
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    animation: textclip 2s linear infinite;
+    display: inline-block;
+}
+nav:hover ul li:not(:hover){
+  opacity:0.5;
+}
+
+@media screen and (max-width:768px){
+  .logo{
+    display:none;
+  }
+  .menu{
+    display:block;
+    position:fixed;
+    width:3rem;
+    height:3rem;
+    top:3rem;
+    right:3rem;
+    z-index:999;
+    cursor:pointer;
+  }
+  .bar,
+  .bar::before,
+  .bar::after{
+    position:absolute;
+    background-color:rgb(220, 166, 223);
+    margin:auto;
+    width:100%;
+    height:3px;
+    content:"";
+    top:50%;
+    left:0;
+  }
+  .bar{
+    margin-top:-2px;
+  }
+  .bar::before{
+    top: -1.2rem;
+  }
+  .bar::after{
+    top:1.2rem;
+  }
+  .bar::before,
+  .bar::after{
+    transform:rotate(0deg);
+  }
+  .active .bar{
+    background-color:transparent;
+  }
+  .active .bar::before{
+    transform: rotate(45deg);
+  }
+  .active .bar::after{
+    transform: rotate(-45deg);
+  }
+  .active .bar::before,
+  .active .bar::after{
+    top:0;
+  }
+  nav{
+    width:25rem;
+    height:100%;
+    background-color:blanchedalmond;
+    position:fixed;
+    transform:translateX(-50rem);
+    z-index:989;
+    line-height:1;
+    font-size:2.5rem;
+    transition: transform 0.5s cubic-bezier(0.56, 0.1, 0.34, 0.91)
+  }
+  .menu-open nav{
+    transform: translateX(0);
+  }
+  nav ul{
+    width:100%;
+    text-align:center;
+    padding-top:10rem;
+  }
+  nav ul li{
+    display:block;
+    padding:4rem 1rem;
+  }
+  
+}
+/* 
 .navlinks {
   color: #fff;
   animation: first_color .5s ease-in-out infinite alternate;
@@ -56,7 +203,7 @@
     text-shadow: 0 0 10px #1877f2, 0 0 20px #1459b3, 0 0 30px #179bff}
   100% {
     text-shadow: 0 0 5px #1877f2, 0 0 10px #1459b3, 0 0 15px #179bff}
-  }
+  } */
 
   /* HeroPage */
   #magic {
@@ -139,6 +286,7 @@
 
   .what .about-text-left .sub-text{
     font-size: 25px;
+    line-height: 150%;
   }
 
   .what .about-text-right .sub-text{
@@ -230,8 +378,7 @@
     transform: rotateX(7deg) translateY(-6px) scale(1.05);  
 }  
 
- h1.special{
-  filter:url("#distort");    
+ h1.special{  
   text-align: center;
       font-size: 40px;
       font-family: 'Ginger';
@@ -269,7 +416,7 @@ h4 .title {
 p.gs_reveal{
   font-size: 25px;
   color:#ccc;
-  
+  line-height: 150%;
 }
 
 
@@ -293,6 +440,19 @@ p.gs_reveal{
     mix-blend-mode: difference;
   }
   
+  .navbar-brand {
+    margin: 0;
+    grid-area: author;
+    font-size: 40px;
+    padding: 30px;
+    font-family: "Fredoka";
+    background-image: linear-gradient(90deg, rgba(94,114,235,1) 0%, rgba(255,145,144,1) 56%, rgba(254,193,149,1) 100%);
+    color: transparent;
+    -webkit-background-clip: text;
+    transform: translateY(-50px);
+    transition: all 400ms cubic-bezier(0.7, 0, 0.3, 1) 100ms;
+  }
+/*   
   .nav {
     width: 100%;
     position: fixed;
@@ -311,18 +471,7 @@ p.gs_reveal{
     -webkit-background-clip: text;
     
 }
-.navbar-brand {
-    margin: 0;
-    grid-area: author;
-    font-size: 40px;
-    padding: 30px;
-    font-family: "Fredoka";
-    background-image: linear-gradient(90deg, rgba(94,114,235,1) 0%, rgba(255,145,144,1) 56%, rgba(254,193,149,1) 100%);
-    color: transparent;
-    -webkit-background-clip: text;
-    transform: translateY(-50px);
-    transition: all 400ms cubic-bezier(0.7, 0, 0.3, 1) 100ms;
-  }
+
 
 .nav div.main_list {
     float: right;
@@ -367,7 +516,7 @@ p.gs_reveal{
   padding-bottom: 20px;
   -webkit-transition: all 0.4s ease;
   transition: all 0.4s ease;
-}
+} */
 
 
 
@@ -790,177 +939,11 @@ h1{
   }
 }
 
-/* 
-Menu */
-
-.overlay .wrapper{
-  position: fixed;
-  top: 0;
-  /*left: -100%;*/
-  right: -100%;
-  height: 100%;
-  width: 100%;
-  background:#ccc;
-  
-  /*background: linear-gradient(90deg, #f92c78, #4114a1);*/
-  /* background: linear-gradient(375deg, #1cc7d0, #2ede98); */
- /* background: linear-gradient(-45deg, #e3eefe 0%, #efddfb 100%);*/
-  transition: all 0.6s ease-in-out;
-}
-#active:checked ~ .wrapper{
-  /*left: 0;*/
-  right:0;
-}
-.overlay .menu-btn{
-  position: absolute;
-  z-index: 2;
-  right: 20px;
-  /*left: 20px; */
-  top: 10px;
-  height: 50px;
-  width: 50px;
-  text-align: center;
-  line-height: 50px;
-  border-radius: 50%;
-  font-size: 20px;
-  cursor: pointer;
-  color:#1a73e8;
-  /*background: linear-gradient(90deg, #f92c78, #4114a1);*/
-  /* background: linear-gradient(375deg, #1cc7d0, #2ede98); */
- /* background: linear-gradient(-45deg, #e3eefe 0%, #efddfb 100%); */
-  transition: all 0.3s ease-in-out;
-}
-.menu-btn span,
-.menu-btn:before,
-.menu-btn:after{
-	content: "";
-	position: absolute;
-	top: calc(50% - 1px);
-	left: 50%;
-	width: 40%;
-	border-bottom: 2px solid white;
-	transition: transform .6s cubic-bezier(0.215, 0.61, 0.355, 1);
-}
-.menu-btn:before{
-  transform: translateY(-8px);
-}
-.menu-btn:after{
-  transform: translateY(8px);
-}
-
-
-.close {
-	z-index: 1;
-	width: 100%;
-	height: 100%;
-	pointer-events: none;
-
-}
-
-/* closing animation */
-#active:checked + .menu-btn span {
-	transform: scaleX(0);
-}
-#active:checked + .menu-btn:before {
-	transform: rotate(45deg);
-  border-color: #fff;
-}
-#active:checked + .menu-btn:after {
-	transform: rotate(-45deg);
-  border-color: #fff;
-}
-.wrapper ul{
-  position:fixed;
-  top: 60%;
-  left: 50%;
-  height: 90%;
-  transform: translate(-50%, -50%);
-  list-style: none;
-  text-align: center;
-}
-.wrapper ul li{
-  height: 10%;
-  margin: 15px 0;
-}
-.wrapper ul li a{
-  text-decoration: none;
-  font-size: 30px;
-  font-weight: 500;
-  padding: 5px 30px;
-  border-radius: 50px;
-  position:flex;
-  line-height: 50px;
-  margin: 5px 30px;
-  opacity: 0;
-  justify-content: center;
-  transition: all 0.3s ease;
-  transition: transform .6s cubic-bezier(0.215, 0.61, 0.355, 1);
-}
-.wrapper ul li a:after{
-  position: flex;
-  background: #fff;
-   /*background: linear-gradient(#14ffe9, #ffeb3b, #ff00e0);*/
-  /*background: linear-gradient(375deg, #1cc7d0, #2ede98);*/
-  width: 100%;
-  height: 100%;
-  left: 0;
-  top: 0;
-  border-radius: 50px;
-  transform: scaleY(0);
-  z-index: -1;
-  transition: transform 0.3s ease;
-}
-.wrapper ul li a:hover:after{
-  transform: scaleY(1);
-}
-.wrapper ul li a:hover{
-  color: #1a73e8;
-}
-input[type="checkbox"]{
-  display: none;
-}
-.content{
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  z-index: -1;
-  text-align: center;
-  width: 50%;
-  color: #202020;
-}
-.content .title{
-  font-size: 40px;
-  font-weight: 700;
-}
-.content p{
-  font-size: 35px;
-  font-weight: 600;
-}
-
-#active:checked ~ .wrapper ul li a{
-  opacity: 1;
-}
-.nav-wrapper ul li a{
-  transition: opacity 1.2s, transform 1.2s cubic-bezier(0.215, 0.61, 0.355, 1);
-  transform: translateX(100px);
-}
-.wrapper ul li a{
-  
-}
-#active:checked ~ .wrapper ul li a{
-	transform: none;
-	transition-timing-function: ease, cubic-bezier(.1,1.3,.3,1); /* easeOutBackを緩めた感じ */
-   transition-delay: .3s;
-  transform: translateX(-100px);
-}
 
 
 
 
-
-
-   
+/* Parallax */
 #parallax,
 .layer {
     height: 250vh;
@@ -1052,12 +1035,12 @@ aside#mouse-parallax ul#scene .layer .canvas.group2 {
   background-position: 980px 2350px;
 }
 
-aside#mouse-parallax ul#scene .layer .canvas.group3 {
+/* aside#mouse-parallax ul#scene .layer .canvas.group3 {
     z-index: 2;
     background-image: url("images/dj.png");
     background-size: 250px;
     background-position: 640px 560px;
-}
+} */
 
 aside#mouse-parallax ul#scene .layer:nth-of-type(3) {
     z-index: 2;
@@ -1081,8 +1064,8 @@ aside#mouse-parallax ul#scene .layer .canvas.group5 {
 aside#mouse-parallax ul#scene .layer .canvas.group6 {
   background-image: url("images/cool.png");
     z-index: 3;
-    background-size: 200px;
-    background-position: 130px 300px;
+    background-size: 300px;
+    background-position:  40% 15%;
 }
 
 
@@ -1120,7 +1103,7 @@ h2{
 p{
   font-family: 'M PLUS Rounded 1c', sans-serif;;
   font-size: 18px;
-  line-height: 150%;
+  line-height: 110%;
 }
 
 .card {
