--- a/style.css
+++ b/style.css
@@ -180,7 +180,7 @@ opacity:0.5;
 nav{
   width:100%;
   height:100%;
-  background-color:blanchedalmond;
+  background-color:black;
   position:fixed;
   transform:translateX(-50rem);
   z-index:989;
