--- a/style.css
+++ b/style.css
@@ -533,7 +533,8 @@ z-index: 100;
 margin-bottom: 0;
 text-align: center;
 justify-content: center;
-color: rgba(94,114,235,1);
+padding-left:45%;
+color: rgb(43, 57, 137);
 }
 
 h6{
